--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 TOKEN_SECRET=topSecret71
+LEGACY_DB_HOST=localhost\SQLEXPRESS
+LEGACY_DB_PORT=1433
+LEGACY_DB_USERNAME=dummy_user
+LEGACY_DB_PASSWORD=dummy_password
+LEGACY_DB_NAME=legacydb
