--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,17 @@
 version: '3.3'
-networks:
-  default:
-    external:
-      name: external-nextjs
 services:
   postgresql:
     restart: always
     image: postgres:12.9
     ports:
-      - '15432:5432'
+      - '5432:5432'
     environment:
-      - DB_USER=postgres
-      - DB_PASS=postgres
-      - DB_NAME=countrydb
+      - DEBUG=false
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=countrydb
+      - PGUSER=postgres
       - PG_TRUST_LOCALNET=true
-      - PG_PASSWORD=postgres
     volumes:
       - /var/lib/postgresql/data
 
